--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 		<h3>Module Assignments</h3>
 
 		<ul>
-			<li><a href ="module-1/craig-mod-1-3">Assignment 1.3</a></li>
-			<li><a href ="module-2/craig-mod2-2">Assignment 2.2</a></li>
-			<li><a href ="module-3/craig-mod3-3">Assignment 3.3</a></li>
+			<li><a href ="module-1/craig-mod-1-3.html">Assignment 1.3</a></li>
+			<li><a href ="module-2/craig-mod2-2.html">Assignment 2.2</a></li>
+			<li><a href ="module-3/craig-mod3-3.html">Assignment 3.3</a></li>
 		</ul>
 
 		<h3>Projects</h3>
