--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 			<li><a href ="module-2/craig-mod2-2.html">Assignment 2.2</a></li>
 			<li><a href ="module-3/craig-mod3-3.html">Assignment 3.3</a></li>
 			<li><a href ="module-4/craig-mod4-2.html">Assignment 4.2</a></li>
+			<li><a href ="module-6/craig-mod6-2.html">Assignment 6.2</a></li>
 		</ul>
 
 		<h3>Projects</h3>
