--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<h3>Projects</h3>
 
 		<ul>
-			<li><a href="">bioSite Project Home Page</a></li>
+			<li><a href="https://king-james-ii.github.io/bioSite/index.html">bioSite Project Home Page</a></li>
 			<li><a href="">Final Exam</a></li>
 		</ul>
 
