--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 			<li><a href ="module-4/craig-mod4-2.html">Assignment 4.2</a></li>
 			<li><a href ="module-6/craig-mod6-2.html">Assignment 6.2</a></li>
 			<li><a href ="module-8/craig-mod8-2.html">Assignment 8.2</a></li>
+			<li><a href ="module-9/craig-mod9-3.html">Assignment 9.3</a></li>
 		</ul>
 
 		<h3>Projects</h3>
