--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!-- James Craig -->
-<!-- Prof. Andrew Sydoriak: Assignment 10.3 -->
+<!-- Prof. Andrew Sydoriak: Assignment 11.2 -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -24,6 +24,7 @@
 			<li><a href ="module-8/craig-mod8-2.html">Assignment 8.2</a></li>
 			<li><a href ="module-9/craig-mod9-3.html">Assignment 9.3</a></li>
 			<li><a href ="module-10/craig-mod10-3.html">Assignment 10.3</a></li>
+			<li><a href ="module-11/craig-mod11-2.html">Assignment 11.2</a></li>
 		</ul>
 
 		<h3>Projects</h3>
