--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!-- James Craig -->
-<!-- Prof. Andrew Sydoriak: Assignment 11.2 -->
+<!-- Prof. Andrew Sydoriak: Assignment 12.2 -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -25,6 +25,7 @@
 			<li><a href ="module-9/craig-mod9-3.html">Assignment 9.3</a></li>
 			<li><a href ="module-10/craig-mod10-3.html">Assignment 10.3</a></li>
 			<li><a href ="module-11/craig-mod11-2.html">Assignment 11.2</a></li>
+			<li><a href ="module-12/craig-mod12-2.html">Assignment 12.2</a></li>
 		</ul>
 
 		<h3>Projects</h3>
